--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ before_install:
     - |
       # tfold is a helper to create folded reports
       tfold () {
+          echo "START"
           title=$1
           fold=$(echo $title | sed -r 's/[^-_A-Za-z\d]+/./g')
           shift
@@ -42,7 +43,7 @@ before_install:
           deps=skip
           skip=1
       else
-          COMPONENTS=$(find src -mindepth 3 -type f -name phpunit.xml.dist -printf '%h\n')
+          COMPONENTS=$(find src -mindepth 2 -type f -name phpunit.xml.dist -printf '%h\n')
       fi
 
       # php.ini configuration
