--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,7 @@ before_install:
       stty cols 120
       PHP=$TRAVIS_PHP_VERSION
       [ -d ~/.composer ] || mkdir ~/.composer
-      cp .composer/* ~/.composer/
-      export PHPUNIT=$(readlink -f ./vendor/bin/phpunit)
+      export PHPUNIT=$(readlink ./vendor/bin/phpunit)
       export PHPUNIT_X="$PHPUNIT --exclude-group tty,benchmark,intl-data"
       export COMPOSER_UP='composer update --no-progress --no-suggest --ansi'
 
