--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,11 @@ before_install:
       stty cols 120
       PHP=$TRAVIS_PHP_VERSION
       [ -d ~/.composer ] || mkdir ~/.composer
-      export PHPUNIT=$(readlink ./vendor/bin/phpunit)
-      export PHPUNIT_X="$PHPUNIT --exclude-group tty,benchmark,intl-data"
+      export PHPUNIT="./vendor/bin/phpunit"
+      export PHPUNIT_X="$PHPUNIT --exclude-group benchmark"
+      echo "PHPUNIT:"
+      echo "$PHPUNIT"
+      echo "$PHPUNIT_X"
       export COMPOSER_UP='composer update --no-progress --no-suggest --ansi'
 
       # tfold is a helper to create folded reports
