--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
+        "symfony/phpunit-bridge": "^3.2",
         "geoip2/geoip2": "~2.0",
         "symfony/stopwatch": "~2.5",
         "php-http/message": "^1.0",
