--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "php-http/discovery": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
+        "phpunit/phpunit": "4.8.* || 5.4.*",
         "symfony/phpunit-bridge": "^3.2",
         "geoip2/geoip2": "~2.0",
         "symfony/stopwatch": "~2.5",
