--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -40,4 +40,8 @@
             <directory>./src/</directory>
         </whitelist>
     </filter>
+
+    <listeners>
+        <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
+    </listeners>
 </phpunit>
