--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,9 @@
         "geoip2/geoip2": "~2.0",
         "symfony/stopwatch": "~2.5",
         "php-http/message": "^1.0",
-        "php-http/guzzle6-adapter": "^1.0",
-        "php-http/mock-client": "^0.3.0"
+        "php-http/curl-client": "^1.0",
+        "php-http/mock-client": "^0.3.0",
+        "guzzlehttp/psr7": "^1.4"
     },
     "suggest": {
         "ext-geoip": "Enabling the geoip extension allows you to use the MaxMindProvider.",
