--- a/src/Provider/Geoip/composer.json
+++ b/src/Provider/Geoip/composer.json
@@ -18,7 +18,7 @@
     "require-dev": {
         "phpunit/phpunit": "^4.8",
         "php-http/message": "^1.0",
-        "php-http/guzzle6-adapter": "^1.1",
+        "php-http/curl-client": "^1.7",
         "symfony/phpunit-bridge": "^3.2",
         "guzzlehttp/psr7": "^1.4"
     },
